--- a/README.asciidoc
+++ b/README.asciidoc
@@ -1,17 +1,25 @@
-# Sokoban!
+= Sokoban!
 
 This is a demo program provided for the purpose of learning how to
 write unit test caeses.
 
 Execute the program using the following command:
 
-    python3 sokoban.py
+------
+python3 sokoban.py
+------
 
 Run test cases using the following command:
 
-    python3 _test_sokoban.py
+------
+python3 _test_sokoban.py
+------
 
-## Credits
+== Screenshot
+
+image::screenshot.png[]
+
+== Credits
 
   * The tiles are from https://github.com/borgar/sokoban-skins
   * Level file from, Magic Pearls collection at
